# MicroSPAT

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  README_old.md  build.py  config.py  environment.yml  manage.py  package.json  pyproject.toml  requirements.txt  run.py
app/: __init__.py  (+1 more)
src/microspat-py/: config.py  dev_requirements.txt  manage.py  min_requirements.txt  pyproject.toml  requirements.txt  run.py
src/microspat-py/additional_hooks/: hook-eventlet.support.greendns.py  hook-scipy.py  hook-scipy.sparse.csgraph.py  hook-scipy.special._unfuncs.py  hook-sklearn.metrics.cluster.py  hook-sqlalchemy.py
src/microspat-py/app/: __init__.py
src/microspat-py/app/custom_sql_types/: custom_types.py
src/microspat-py/app/microspat/: __init__.py  api.py  config.py  db_events.py  dict_schemas.py  schemas.py  utils.py
src/microspat-py/app/microspat/artifact_estimator/: ArtifactEstimator.py  __init__.py
src/microspat-py/app/microspat/bin_finder/: BinFinder.py
src/microspat-py/app/microspat/cluster/: FeatureCluster.py
src/microspat-py/app/microspat/events/: __init__.py  base.py
src/microspat-py/app/microspat/fsa_tools/: FSAExtractor.py  PlateExtractor.py
src/microspat-py/app/microspat/models/: __init__.py  attributes.py  utils.py
src/microspat-py/app/microspat/peak_annotator/: PeakAnnotators.py  PeakFilters.py
src/microspat-py/app/microspat/quantification_bias/: BiasCalculator.py  __init__.py
src/microspat-py/app/microspat/signal_processor/: SignalProcessor.py  TraceProcessor.py
src/microspat-py/app/utils/: __init__.py  utils.py
(+1051 files in other folders)
