[tool.poetry]
name = "microspat"
version = "2.0.3"
description = ""
authors = ["Max Murphy <murphy2122@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
Click = "7.0"
dnspython = "1.16.0"
eventlet = "0.25.1"
Flask = "1.1.1"
Flask-SocketIO = "4.2.1"
Flask-SQLAlchemy = "2.4.1"
greenlet = "0.4.15"
itsdangerous = "1.1.0"
MarkupSafe = "1.1.1"
marshmallow = "3.2.2"
marshmallow-sqlalchemy = "0.20.0"
numpy = "1.17.4"
scikit-learn = "0.21.3"
sklearn = "0.0"
ujson = "1.35"

[tool.poetry.dev-dependencies]
ipython = "pyinstaller"
pyinstaller = "3.6"
machoLib = "^1.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
